Fixed problem in problem 1

--- a/assignment_1.ipynb
+++ b/assignment_1.ipynb
@@ -15,13 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_max(nums):\n",
     "    '''Takes in a list of numbers and returns the highest number'''\n",
-    "    max = 0\n",
+    "    max = nums[0]\n",
     "    #default max value is 0\n",
     "    for i in range(0,len(nums),1):\n",
     "        if max < nums[i]:\n",
@@ -41,23 +41,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7"
+       "-2"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nums = [1,2, 7,4,3]\n",
-    "find_max(nums)"
+    "tests= []\n",
+    "tests.append([3,45,78,2,53,1,0])\n",
+    "tests.append([-2,-6,-23,-646])\n",
+    "tests.append([0.5,-1.4,5.3,-2.44])\n",
+    "\n",
+    "find_max(tests[1])"
    ]
   },
   {
